added download page and changed accordian styles

--- a/about.html
+++ b/about.html
@@ -78,7 +78,8 @@
                                 class="fa-brands fa-instagram fa-2x"></i></a>
 
                         <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
-                        <button class="btn session" type="submit">Book a Session</button>
+                        <p class="download"><a class="btn session" href="./download.html">Download & Join</a></p>
+
                     </form>
                 </div>
             </div>
@@ -89,8 +90,56 @@
     <body>
         <div class="row featurette">
             <div class="col-md-10 text-center mx-auto">
-                <img class="rounded-circle animate__animated animate__heartBeat about-logo"
-                    src="https://i.imgur.com/yC4IfAS.png" alt="" height="140px" width="140px">
+                <div class="container-fluid" id="abouttitle">
+                    <div class="row text-center">
+                        <div class="col-lg-4">
+                            <img class="rounded-circle animate__animated animate__heartBeat"
+                                src="https://i.imgur.com/FXMlHYl.png" alt="" height="140px" width="140px">
+                            <title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777"
+                                dy=".3em"></text>
+                            </svg>
+
+                            <h2>Holistic Approach</h2>
+                            <p>We work with you from the inside out. We look at overall health, wellness andfoundation
+                                of
+                                movement
+                                ensuring you feel confident in and outside of the studio.</p>
+                            <!-- <p><a class="btn" href="#">View details &raquo;</a></p> -->
+                        </div><!-- /.col-lg-4 -->
+                        <div class="col-lg-4">
+                            <img class="rounded-circle animate__animated animate__heartBeat"
+                                src="https://i.imgur.com/yC4IfAS.png" alt="" height="140px" width="140px">
+                            <!-- <img src="https://i.imgur.com/ohdrr04.mp4" allow="autoplay" frameborder="0"></iframe> -->
+                            <title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777"
+                                dy=".3em"></text>
+                            </svg>
+
+                            <h2>Commitment</h2>
+                            <p>We are committed to continually learn and develop to provide you the mostup to date
+                                guidance and
+                                advice
+                                when it comes to Women’s health.
+                            </p>
+                        </div><!-- /.col-lg-4 -->
+                        <div class="col-lg-4">
+                            <img class="rounded-circle animate__animated animate__heartBeat"
+                                src="https://i.imgur.com/JnnY4YA.png" alt="" height="140px" width="140px">
+                            <title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777"
+                                dy=".3em"></text>
+                            </svg>
+
+                            <h2>Empowerment</h2>
+                            <p>We want to educate girls and women to allow them to be the change we wantto see in our
+                                communities.
+                            </p>
+                            <!-- <p><a class="btn" href="#">View details &raquo;</a></p> -->
+                        </div><!-- /.col-lg-4 -->
+                    </div><!-- /.row -->
+                </div>
+                <hr>
                 <h2 class="featurette-heading"><span>Mission Statement</span></h2>
                 <p class="lead animate__animated animate__fadeInLeft">Fonseca Fitness is an all-encompassing
                     environment
