--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,8 @@
                                 class="fa-brands fa-instagram fa-2x"></i></a>
 
                         <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
-                        <button class="btn session" type="submit">Book a Session</button>
+                        <p class="download"><a class="btn session" href="./download.html">Download & Join</a></p>
+
                     </form>
                 </div>
             </div>
@@ -90,10 +91,10 @@
         <div class="container-fluid">
             <div class="card-group">
                 <div class="card animate__animated animate__fadeInDown">
-                    <img src="https://i.imgur.com/DoSGpcV.png" class="card-img" id="gymimg" alt="...">
+                    <img src="https://i.imgur.com/DoSGpcV.png" class="card-img" id="contactimg" alt="...">
                 </div>
                 <div>
-                    <h2 class="qtitle animate__animated animate__fadeInDown">Ask a Question!</h2>
+                    <h2 class="qtitle animate__animated animate__fadeInDown">Ask a Question</h2>
                     <form class="animate__animated animate__fadeInDown">
                         <input name="name" type="text" class="feedback-input" placeholder="Name" />
                         <input name="email" type="text" class="feedback-input" placeholder="Email" />
@@ -110,10 +111,11 @@
             <hr class="featurette-divider">
 
             <div class="accordion accordion-flush" id="accordionFlushExample">
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingOne">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                <div class="accordion-item" style="color: orange;">
+                    <h2 class="accordion-header" id="flush-headingOne" style="color: black;">
+                        <button class="accordion-button collapsed btn d-block text-center" type="button"
+                            data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false"
+                            aria-controls="flush-collapseOne">
                             Terms and Conditions
                         </button>
                     </h2>
