--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             <a href="https://www.instagram.com/fonsecafitness_/"><i class="fa-brands fa-instagram fa-2x"></i></a>
 
             <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
-            <button class="btn session" type="submit">Book a Session</button>
+            <!-- <button class="btn session" type="submit">Join Now</button> -->
+            <p class="download"><a class="btn session" href="./download.html">Download & Join</a></p>
 
           </form>
         </div>
@@ -135,7 +136,7 @@
             <p>We work in synergy bringing together individual skills and expertise to createbest possible outcomes for
               you, the women of Fonseca Fitness.
             </p>
-            <p><a class="btn" href="./timetable.html">View Classes</a></p>
+            <p><a class="btn" href="./download.html">Download & Join</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="rounded-circle animate__animated animate__heartBeat" src="https://i.imgur.com/JnnY4YA.png"
