--- a/pricing.html
+++ b/pricing.html
@@ -79,7 +79,8 @@
                                 class="fa-brands fa-instagram fa-2x"></i></a>
 
                         <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
-                        <button class="btn session" type="submit">Book a Session</button>
+                        <p class="download"><a class="btn session" href="./download.html">Download & Join</a></p>
+
                     </form>
                 </div>
             </div>
