--- a/timetable.html
+++ b/timetable.html
@@ -77,7 +77,8 @@
                                 class="fa-brands fa-instagram fa-2x"></i></a>
 
                         <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
-                        <button class="btn session" type="submit">Book a Session</button>
+                        <p class="download"><a class="btn session" href="./download.html">Download & Join</a></p>
+
                     </form>
                 </div>
             </div>
@@ -109,7 +110,6 @@
                                 <li><strong>7 - 7:45</strong> - POWER</li>
                                 <li><strong>8 - 8:45</strong> - OVER 50's</li>
                                 <li><strong>9:30 - 10:15</strong> - MUM & BABY</li>
-                                <li><strong>BREAK</strong></li>
                                 <li><strong>16:15 - 17:00</strong> - 11 - 16 STRENGTH AND EMPOWERMENT</li>
                                 <li><strong>17:30 - 18:15</strong> - BURN</li>
                                 <li><strong>18:30-19:30</strong> - CALISTHENICS</li>
@@ -118,9 +118,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item animate__animated animate__fadeInRight">
-                    <h2 class="accordion-header" id="flush-headingTwo">
-                        <button class="accordion-button collapsed d-block text-center" type="button"
+                <div class="accordion-item animate__animated animate__fadeInRight" style="color: orange;">
+                    <h2 class="accordion-header" style="color: black;" id="flush-headingTwo">
+                        <button class="accordion-button collapsed btn d-block text-center" type="button"
                             data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false"
                             aria-controls="flush-collapseTwo">
                             <strong>Tuesday</strong>
@@ -132,7 +132,6 @@
                             <ul style="list-style-type: none">
 
                                 <li><strong>7 - 7:45</strong> - BURN</li>
-                                <li><strong>BREAK</strong></li>
                                 <li><strong>16:15 - 17:00</strong> - MUM & DAUGHTER WORKOUT</li>
                                 <li><strong>17:30 - 18:15</strong> - BURN</li>
                                 <li><strong>19:30 - 20:15</strong> - OVER 50's</li>
@@ -141,9 +140,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item animate__animated animate__fadeInLeft">
-                    <h2 class="accordion-header" id="flush-headingThree">
-                        <button class="accordion-button collapsed d-block text-center" type="button"
+                <div class="accordion-item animate__animated animate__fadeInLeft" style="color: orange;">
+                    <h2 class="accordion-header" style="color: black;" id="flush-headingThree">
+                        <button class="accordion-button collapsed btn d-block text-center" type="button"
                             data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false"
                             aria-controls="flush-collapseThree">
                             <strong>Wednesday</strong>
@@ -155,9 +154,7 @@
                             <ul style="list-style-type: none">
                                 <li><strong>6 - 6:45</strong> - BURN</li>
                                 <li><strong>7 - 7:45</strong> - POWER</li>
-                                <li><strong>BREAK</strong></li>
                                 <li><strong>9:30 - 10:15</strong> - MUM & BABY</li>
-                                <li><strong>BREAK</strong></li>
                                 <li><strong>16:15 - 17:00</strong> - 11 - 16 STRENGTH AND EMPOWERMENT</li>
                                 <li><strong>17:30 - 18:15</strong> - POWER</li>
                                 <li><strong>18:30 - 19:15</strong> - BURN</li>
@@ -167,9 +164,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingFour">
-                        <button class="accordion-button collapsed d-block text-center" type="button"
+                <div class="accordion-item" style="color: orange;">
+                    <h2 class="accordion-header" id="flush-headingFour" style="color: black;">
+                        <button class="accordion-button collapsed btn d-block text-center" type="button"
                             data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false"
                             aria-controls="flush-collapseFour">
                             <strong>Thursday</strong>
@@ -180,9 +177,7 @@
                         <div class="accordion-body">
                             <ul style="list-style-type: none">
                                 <li><strong>7 - 7:45</strong> - BURN</li>
-                                <li><strong>BREAK</strong></li>
                                 <li><strong>9:30 - 10:30</strong> - POSTNATAL REHABILITATION</li>
-                                <li><strong>BREAK</strong></li>
                                 <li><strong>16:15 - 17:00</strong> - MUM & DAUGHTER WORKOUT</li>
                                 <li><strong>17:30 - 18:15</strong> - POWER</li>
                                 <li><strong>17:30-19:00</strong> - CALISTHENICS</li>
@@ -195,9 +190,9 @@
                     </div>
                 </div>
 
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingFive">
-                        <button class="accordion-button collapsed d-block text-center" type="button"
+                <div class="accordion-item" style="color: orange;">
+                    <h2 class="accordion-header" id="flush-headingFive" style="color: black;">
+                        <button class="accordion-button collapsed btn d-block text-center" type="button"
                             data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false"
                             aria-controls="flush-collapseFive">
                             <strong>Friday</strong>
@@ -209,9 +204,7 @@
                             <ul style="list-style-type: none">
                                 <li><strong>6 - 6:45</strong> - BURN</li>
                                 <li><strong>7 - 7:45</strong> - POWER</li>
-                                <li><strong>BREAK</strong></li>
                                 <li><strong>9:30 - 10:15</strong> - MUM & BABY</li>
-                                <li><strong>BREAK</strong></li>
                                 <li><strong>17:30 - 18:30</strong> - PARTY NIGHT</li>
                                 <li><strong>18:30-19:30</strong> - PARTY NIGHT</li>
                                 <li><strong>19:30-20:30</strong> - YOGA</li>
@@ -219,14 +212,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
-                    <h1 class="accordion-header" id="flush-headingSix">
-                        <button class="accordion-button collapsed d-block text-center" type="button"
+                <div class="accordion-item" style="color: orange;">
+                    <h2 class="accordion-header" id="flush-headingSix" style="color: black;">
+                        <button class="accordion-button collapsed btn d-block text-center" type="button"
                             data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false"
                             aria-controls="flush-collapseSix">
                             <strong>Saturday</strong>
                         </button>
-                    </h1>
+                    </h2>
                     <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix"
                         data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
@@ -237,9 +230,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingSeven">
-                        <button class="accordion-button collapsed d-block text-center" type="button"
+                <div class="accordion-item" style="color: orange;">
+                    <h2 class="accordion-header" id="flush-headingSeven" style="color: black;">
+                        <button class="accordion-button collapsed btn d-block text-center" type="button"
                             data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="false"
                             aria-controls="flush-collapseSeven">
                             <strong>Sunday</strong>
