download page finished index finished await feedback

--- a/Download.html
+++ b/Download.html
@@ -86,56 +86,75 @@
             </div>
         </nav>
     </header>
-    <div class="container-fluid text-center">
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="card" id="app-download">
-                    <img src="https://i.imgur.com/WQakZWil.jpg" class="card-img-top mx-auto" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title"><span>Download & Join - iPhone</span> </h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="https://apps.apple.com/gb/app/fonseca-fitness/id1609042663"><button class="btn session"
-                                type="submit">iPhone App</button></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="card" id="app-download">
-                    <img src="https://i.imgur.com/0lcWLTgl.jpg" class="card-img-top mx-auto" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title"><span>Download & Join - Android</span> </h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="https://play.google.com/store/apps/details?id=fonseca.fitness&gl=GB"><button
-                                class="btn session">Android
-                                App</button></a>
-                    </div>
 
+    <div>
+        <div class="container-fluid" id="dlimg">
+            <div class="card-group" id="dlimg">
+                <div class="card animate__animated animate__fadeInDown">
+                    <img src="https://i.imgur.com/gUbXW6n.jpg" class="card-img" alt="...">
                 </div>
+                <div class="card animate__animated animate__fadeInDown">
+                    <img src="https://i.imgur.com/xeUmT0z.jpg" class="card-img" alt="">
+                </div>
+
             </div>
         </div>
+    </div>
 
+
+    <div>
+        <hr class="featurette-divider">
+    </div>
+    <div class="card text-center">
+        <div class="card-header">
+            <h2 class="text-center"><span>Join the Family</span></h2>
+        </div>
+        <div class="card-body">
+            <p class="card-text">
+                <span>
+                    <p> 1. Download the App </p>
+                    <p> 2. Purchase Membership</p>
+                    <p> 3. Book Classes</p>
+                    <p> 4. Workout! </p>
+                </span>
+
+            </p>
+            <a href="https://apps.apple.com/gb/app/fonseca-fitness/id1609042663"><button class="btn session"
+                    type="submit">iPhone App</button></a>
+            <a href="https://play.google.com/store/apps/details?id=fonseca.fitness&gl=GB"><button
+                    class="btn session">Android
+                    App</button></a>
+        </div>
+
+    </div>
+
+
+    <hr class="featurette-divider">
 
 
 
 
     </div>
-
-    <hr class="featurette-divider">
     <div class="container-fluid">
-        <div class="card-group">
+        <div class="card-group" id="goodtimes">
             <div class="card animate__animated animate__fadeInDown">
-                <img src="https://i.imgur.com/0lcWLTg.jpg" class="card-img" alt="...">
+                <img src="https://i.imgur.com/C4DYCGw.jpg" class="card-img" alt="...">
             </div>
             <div class="card animate__animated animate__fadeInDown">
-                <img src="https://i.imgur.com/WQakZWi.jpg" class="card-img" alt="">
+                <img src="https://i.imgur.com/DGcdVPu.jpg" class="card-img" alt="">
             </div>
             <div class="card animate__animated animate__fadeInDown">
-                <img src="https://i.imgur.com/8IJnFS7.jpg" class="card-img" alt="...">
+                <img src="https://i.imgur.com/nkdZagR.jpg" class="card-img" alt="...">
+            </div>
+            <div class="card animate__animated animate__fadeInDown">
+                <img src="https://i.imgur.com/gDu016E.jpg" class="card-img" alt="...">
             </div>
 
         </div>
-
         <hr class="featurette-divider">
+
+
+
 
 
         <!-- FOOTER -->
