--- a/contact.html
+++ b/contact.html
@@ -110,6 +110,13 @@
             </div>
             <hr class="featurette-divider">
 
+            <div class="text-center">
+                <p><span> Gym opening times:
+                        Monday-Friday: 6am-8pm
+                        Saturday & Sunday: 8am-12pm</span></p>
+            </div>
+
+
             <div class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item" style="color: orange;">
                     <h2 class="accordion-header" id="flush-headingOne" style="color: black;">
@@ -122,38 +129,38 @@
                     <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                         data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            <ol>
-                                <li> Our memberships are available for minimum term of 1, 6 or
-                                    12 months.</li>
-                                <li> All payments are to be made via Direct Debit on the 1st of
-                                    every month.</li>
-                                <li> If you are paying by direct debit and you fall behind with
-                                    your membership fees and this is not caused by bank error,
-                                    we may suspend or cancel your membership.We may pass
-                                    your details to a debt collection company to recover any
-                                    outstanding payments.</li>
-                                <li> Once a member, you will need to download our Fonseca
-                                    Fitness App in order to book onto classes.</li>
-                                <li> If you are on any membership, apart from Mum & Baby you
-                                    are welcome to access any of our classes.</li>
-                                <li> If you sign up for personal training with any of our coaches,
-                                    you will be invoiced in arrears for the month you have
-                                    trained. These payments are due on the 1st of every month.</li>
-                                <li>The prices, availabilities and ability to have physical or
-                                    virtual personal training is dictated by the trainer
-                                    themselves, as self-employed.</li>
-                                <li>You can book classes in advance via our App.</li>
-                                <li>We may disable your access to the booking class system if
-                                    we deem that you're booking and not attending at a high
-                                    frequency.</li>
-                                <li> If you need to take a temporary break from your
-                                    membership for any reason you can freeze your
-                                    membership for 1 month at a time. To still have access to
-                                    our facebook support group & App this will be charged at
-                                    £15 per month whilst your full membership is frozen. You
-                                    must request to freeze your membership at least 5 days
-                                    before your DD is due.</li>
-                            </ol>
+
+                            <p>1. Our memberships are available for minimum term of 1, 6 or
+                                12 months.</p>
+                            <p>2. All payments are to be made via Direct Debit on the 1st of
+                                every month.</p>
+                            <p>3. If you are paying by direct debit and you fall behind with
+                                your membership fees and this is not caused by bank error,
+                                we may suspend or cancel your membership.We may pass
+                                your details to a debt collection company to recover any
+                                outstanding payments.</p>
+                            <p>4. Once a member, you will need to download our Fonseca
+                                Fitness App in order to book onto classes.</p>
+                            <p>5. If you are on any membership, apart from Mum & Baby you
+                                are welcome to access any of our classes.</p>
+                            <p>6. If you sign up for personal training with any of our coaches,
+                                you will be invoiced in arrears for the month you have
+                                trained. These payments are due on the 1st of every month.</p>
+                            <p>7. The prices, availabilities and ability to have physical or
+                                virtual personal training is dictated by the trainer
+                                themselves, as self-employed.</p>
+                            <p>8. You can book classes in advance via our App.</p>
+                            <p>9. We may disable your access to the booking class system if
+                                we deem that you're booking and not attending at a high
+                                frequency.</p>
+                            <p>10. If you need to take a temporary break from your
+                                membership for any reason you can freeze your
+                                membership for 1 month at a time. To still have access to
+                                our facebook support group & App this will be charged at
+                                £15 per month whilst your full membership is frozen. You
+                                must request to freeze your membership at least 5 days
+                                before your DD is due.</p>
+
                         </div>
                     </div>
                 </div>
