--- a/index.html
+++ b/index.html
@@ -195,8 +195,45 @@
       </div>
       <hr class="featurette-divider">
 
+      <div class="text-center">
+        <p><span> Gym opening times:
+            Monday-Friday: 6am-8pm
+            Saturday & Sunday: 8am-12pm</span></p>
+      </div>
+      <hr class="featurette-divider">
 
-      <!-- FOOTER -->
+      <div class="card text-center">
+        <div class="card-header">
+          <h3 class="card-title text-center"><span>Facilities Include:</span></h3>
+          <img src="https://i.imgur.com/cnp5Xfh.jpg" id="facilities-img" height="600px" width="500px" alt="">
+        </div>
+        <div class="card-body">
+          <p class="card-text text-center">
+          <ul id="facilities-list">
+            <li>Multi Gym</li>
+            <li>3 Benches</li>
+            <li>Dumbells up to 25KG</li>
+            <li>2 x Sqaut Racks</li>
+            <li>2 x Air Bikes</li>
+            <li>1 Rowing Machine</li>
+            <li>Plyo Boxes</li>
+            <li>1 x Prowler</li>
+            <li>1 x Sled</li>
+            <li>1 x Trap Bar</li>
+            <li>1 x Safety Squat</li>
+            <li>1 x FB Bar</li>
+            <li>5 x Normal Bars</li>
+            <li>1 x Farmers Walk</li>
+            <li>Sandbags</li>
+            <li>Based a 5 minute drive away from the town center, we offer free parking</li>
+          </ul>
+          </p>
+          <a href="./download.html"><button class="btn session">Download and Join</button></a>
+        </div>
+      </div>
+
+
+      <hr class="featurette-divider">
 
       <footer class="footer">
         <nav class="navbar navbar-expand-md navbar-dark bg-black">
