--- a/pricing.html
+++ b/pricing.html
@@ -109,7 +109,7 @@
             <div class="col">
                 <div class="card h-100" id="membership">
 
-                    <div class="card-body animate__animated animate__fadeIn">
+                    <div class="card-body animate__animated animate__fadeInRight">
                         <h3 class="card-title"> <span>Mum and Baby - £45</span></h3>
                         <p class="card-text">Pay monthly, no fixed contract, includes access to 3 mum
                             and baby classes per week at 9.30am, 15 minute studio
@@ -121,7 +121,7 @@
             <div class="col">
                 <div class="card h-100" id="membership">
 
-                    <div class="card-body animate__animated animate__fadeInRight">
+                    <div class="card-body animate__animated animate__fadeInLeft">
                         <h3 class="card-title"> <span>Drop In - £12.50</span> </h3>
                         <p class="card-text">Access to one Fonseca Fitness class.
                             (Expires within 24 hours).</p>
@@ -203,7 +203,34 @@
                     </div>
                 </div>
             </div>
+            <div class="col">
+                <div class="card h-100" id="membership">
+                    <div class="card-body animate__animated animate__fadeIn">
+                        <h3 class="card-title"> <span>12 Month Membership - £49pm</span></h3>
+                        <p class="card-text">Gym only membership, all gym access is bookable via the app</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100" id="membership">
+                    <div class="card-body animate__animated animate__fadeIn">
+                        <h3 class="card-title"> <span>6 Month Membership - £57pm</span></h3>
+                        <p class="card-text">Gym only membership, all gym access is bookable via the app</p>
+                    </div>
+                </div>
+            </div>
         </div>
+        <div class="col">
+            <div class="card h-100" id="membership">
+
+                <div class="card-body animate__animated animate__fadeIn">
+
+                    <p class="card-text">*8 women per hourly slot to enable keeping the intimacy and community feel
+                        without having to queue for equipment</p>
+                </div>
+            </div>
+        </div>
+
 
         <hr class="featurette-divider">
 
