--- a/timetable.html
+++ b/timetable.html
@@ -105,16 +105,14 @@
                     <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                         data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            <ul style="list-style-type: none">
-                                <li><strong>6 - 6:45</strong> - BURN</li>
-                                <li><strong>7 - 7:45</strong> - POWER</li>
-                                <li><strong>8 - 8:45</strong> - OVER 50's</li>
-                                <li><strong>9:30 - 10:15</strong> - MUM & BABY</li>
-                                <li><strong>16:15 - 17:00</strong> - 11 - 16 STRENGTH AND EMPOWERMENT</li>
-                                <li><strong>17:30 - 18:15</strong> - BURN</li>
-                                <li><strong>18:30-19:30</strong> - CALISTHENICS</li>
-                                <li><strong>18:30-19:15</strong> - POWER</li>
-                            </ul>
+                            <p><strong>6 - 6:45</strong> - BURN</p>
+                            <p><strong>7 - 7:45</strong> - POWER</p>
+                            <p><strong>8 - 8:45</strong> - OVER 50's</p>
+                            <p><strong>9:30 - 10:15</strong> - MUM & BABY</p>
+                            <p><strong>16:15 - 17:00</strong> - 11 - 16 STRENGTH AND EMPOWERMENT</p>
+                            <p><strong>17:30 - 18:15</strong> - BURN</p>
+                            <p><strong>18:30-19:30</strong> - CALISTHENICS</p>
+                            <p><strong>18:30-19:15</strong> - POWER</p>
                         </div>
                     </div>
                 </div>
@@ -129,14 +127,11 @@
                     <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                         data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            <ul style="list-style-type: none">
-
-                                <li><strong>7 - 7:45</strong> - BURN</li>
-                                <li><strong>16:15 - 17:00</strong> - MUM & DAUGHTER WORKOUT</li>
-                                <li><strong>17:30 - 18:15</strong> - BURN</li>
-                                <li><strong>19:30 - 20:15</strong> - OVER 50's</li>
-                                <li><strong>19:30 - 20:15</strong> - STRONGWOMAN</li>
-                            </ul>
+                            <p><strong>7 - 7:45</strong> - BURN</p>
+                            <p><strong>16:15 - 17:00</strong> - MUM & DAUGHTER WORKOUT</p>
+                            <p><strong>17:30 - 18:15</strong> - BURN</p>
+                            <p><strong>19:30 - 20:15</strong> - OVER 50's</p>
+                            <p><strong>19:30 - 20:15</strong> - STRONGWOMAN</p>
                         </div>
                     </div>
                 </div>
@@ -151,16 +146,14 @@
                     <div id="flush-collapseThree" class="accordion-collapse collapse"
                         aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            <ul style="list-style-type: none">
-                                <li><strong>6 - 6:45</strong> - BURN</li>
-                                <li><strong>7 - 7:45</strong> - POWER</li>
-                                <li><strong>9:30 - 10:15</strong> - MUM & BABY</li>
-                                <li><strong>16:15 - 17:00</strong> - 11 - 16 STRENGTH AND EMPOWERMENT</li>
-                                <li><strong>17:30 - 18:15</strong> - POWER</li>
-                                <li><strong>18:30 - 19:15</strong> - BURN</li>
-                                <li><strong>18:30 - 19:30</strong> - FEMALE SELF DEFENCE</li>
-                                <li><strong>19:30 - 20:15</strong> - BOXING</li>
-                            </ul>
+                            <p><strong>6 - 6:45</strong> - BURN</p>
+                            <p><strong>7 - 7:45</strong> - POWER</p>
+                            <p><strong>9:30 - 10:15</strong> - MUM & BABY</p>
+                            <p><strong>16:15 - 17:00</strong> - 11 - 16 STRENGTH AND EMPOWERMENT</p>
+                            <p><strong>17:30 - 18:15</strong> - POWER</p>
+                            <p><strong>18:30 - 19:15</strong> - BURN</p>
+                            <p><strong>18:30 - 19:30</strong> - FEMALE SELF DEFENCE</p>
+                            <p><strong>19:30 - 20:15</strong> - BOXING</p>
                         </div>
                     </div>
                 </div>
@@ -175,17 +168,19 @@
                     <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
                         data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            <ul style="list-style-type: none">
-                                <li><strong>7 - 7:45</strong> - BURN</li>
-                                <li><strong>9:30 - 10:30</strong> - POSTNATAL REHABILITATION</li>
-                                <li><strong>16:15 - 17:00</strong> - MUM & DAUGHTER WORKOUT</li>
-                                <li><strong>17:30 - 18:15</strong> - POWER</li>
-                                <li><strong>17:30-19:00</strong> - CALISTHENICS</li>
-                                <li><strong>18:30-19:15</strong> - BURN</li>
-                                <li><strong>19:15 - 20:15</strong> - MAMATONE*</li>
-                                <li><strong>19:30-20:15</strong> - POWER</li>
-                                <li><strong>20:30-21:15</strong> - HYPOTONE*</li>
-                            </ul>
+
+                            <p><strong>7 - 7:45</strong> - BURN
+                            </p>
+                            <p><strong>9:30 - 10:30</strong> - POSTNATAL REHABILITATION
+                            </p>
+                            <p><strong>16:15 - 17:00</strong> - MUM & DAUGHTER WORKOUT</p>
+                            <p><strong>17:30 - 18:15</strong> - POWER</p>
+                            <p><strong>17:30-19:00</strong> - CALISTHENICS</p>
+                            <p><strong>18:30-19:15</strong> - BURN</p>
+                            <p><strong>19:15 - 20:15</strong> - MAMATONE*</p>
+                            <p><strong>19:30-20:15</strong> - POWER</p>
+                            <p><strong>20:30-21:15</strong> - HYPOTONE*</p>
+
                         </div>
                     </div>
                 </div>
@@ -201,14 +196,14 @@
                     <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive"
                         data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            <ul style="list-style-type: none">
-                                <li><strong>6 - 6:45</strong> - BURN</li>
-                                <li><strong>7 - 7:45</strong> - POWER</li>
-                                <li><strong>9:30 - 10:15</strong> - MUM & BABY</li>
-                                <li><strong>17:30 - 18:30</strong> - PARTY NIGHT</li>
-                                <li><strong>18:30-19:30</strong> - PARTY NIGHT</li>
-                                <li><strong>19:30-20:30</strong> - YOGA</li>
-                            </ul>
+
+                            <p><strong>6 - 6:45</strong> - BURN</p>
+                            <p><strong>7 - 7:45</strong> - POWER</p>
+                            <p><strong>9:30 - 10:15</strong> - MUM & BABY</p>
+                            <p><strong>17:30 - 18:30</strong> - PARTY NIGHT</p>
+                            <p><strong>18:30-19:30</strong> - PARTY NIGHT</p>
+                            <p><strong>19:30-20:30</strong> - YOGA</p>
+
                         </div>
                     </div>
                 </div>
@@ -223,10 +218,10 @@
                     <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix"
                         data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            <ul style="list-style-type: none">
-                                <li><strong>9 - 9:45</strong> - BOXING</li>
-                                <li><strong>10 - 10:45</strong> - BURN</li>
-                            </ul>
+
+                            <p><strong>9 - 9:45</strong> - BOXING</p>
+                            <p><strong>10 - 10:45</strong> - BURN</p>
+
                         </div>
                     </div>
                 </div>
@@ -242,15 +237,19 @@
                         aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
 
-                            <ul style="list-style-type: none">
-                                <li><strong>9 - 10:30</strong> - FEMALE SELF DEFENCE</li>
-                                <li><strong>9 - 9:45</strong> - POWER</li>
-                                <li><strong>10 - 10:45</strong> - BURN</li>
-                            </ul>
+
+                            <p><strong>9 - 10:30</strong> - FEMALE SELF DEFENCE</p>
+                            <p><strong>9 - 9:45</strong> - POWER</p>
+                            <p><strong>10 - 10:45</strong> - BURN</p>
+
 
                         </div>
                     </div>
                 </div>
+                <span class="text-center">*8 women per hourly slot to enable keeping the intimacy and community feel
+                    without having to queue for equipment</span>
+
+                <hr>
 
                 <footer class="footer">
                     <nav class="navbar navbar-expand-md navbar-dark bg-black">
