changes mase on facilities list

--- a/index.html
+++ b/index.html
@@ -209,24 +209,23 @@
         </div>
         <div class="card-body">
           <p class="card-text text-center">
-          <ul id="facilities-list">
-            <li>Multi Gym</li>
-            <li>3 Benches</li>
-            <li>Dumbells up to 25KG</li>
-            <li>2 x Sqaut Racks</li>
-            <li>2 x Air Bikes</li>
-            <li>1 Rowing Machine</li>
-            <li>Plyo Boxes</li>
-            <li>1 x Prowler</li>
-            <li>1 x Sled</li>
-            <li>1 x Trap Bar</li>
-            <li>1 x Safety Squat</li>
-            <li>1 x FB Bar</li>
-            <li>5 x Normal Bars</li>
-            <li>1 x Farmers Walk</li>
-            <li>Sandbags</li>
-            <li>Based a 5 minute drive away from the town center, we offer free parking</li>
-          </ul>
+          <p>Multi Gym</p>
+          <p>3 Benches</p>
+          <p>Dumbells up to 25KG</p>
+          <p>2 x Sqaut Racks</p>
+          <p>2 x Air Bikes</p>
+          <p>1 Rowing Machine</p>
+          <p>Plyo Boxes</p>
+          <p>1 x Prowler</p>
+          <p>1 x Sled</p>
+          <p>1 x Trap Bar</p>
+          <p>1 x Safety Squat</p>
+          <p>1 x FB Bar</p>
+          <p>5 x Normal Bars</p>
+          <p>1 x Farmers Walk</p>
+          <p>Sandbags</p>
+          <p>Based a 5 minute drive away from the town center, we offer free parking</p>
+
           </p>
           <a href="./download.html"><button class="btn session">Download and Join</button></a>
         </div>
